--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-ionicons": "^4.2.0",
     "react-router-dom": "^6.11.2",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "react-top-loading-bar": "^2.3.1",
     "recharts": "^2.6.2",
     "styled-components": "^6.0.0-rc.2",
