--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ionicons": "^4.2.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.11.2",
     "react-spinners": "^0.13.8",
+    "react-to-pdf": "^0.0.14",
     "react-toastify": "^9.1.3",
     "react-top-loading-bar": "^2.3.1",
     "recharts": "^2.6.2",
