--- a/package.json
+++ b/package.json
@@ -13,21 +13,27 @@
     "@emotion/react": "^11.11.0",
     "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.0.13",
+    "@reduxjs/toolkit": "^1.9.5",
+    "antd": "^5.6.2",
     "axios": "^1.4.0",
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ionicons": "^4.2.0",
     "react-paginate": "^8.2.0",
+    "react-redux": "^8.1.0",
     "react-router-dom": "^6.11.2",
     "react-spinners": "^0.13.8",
     "react-to-pdf": "^0.0.14",
     "react-toastify": "^9.1.3",
     "react-top-loading-bar": "^2.3.1",
     "recharts": "^2.6.2",
+    "redux": "^4.2.1",
     "styled-components": "^6.0.0-rc.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.1",
