--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.0.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.29.19",
+    "@types/react-datepicker": "^4.11.2",
     "antd": "^5.6.2",
     "axios": "^1.4.0",
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
+    "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
     "react-ionicons": "^4.2.0",
     "react-paginate": "^8.2.0",
